--- a/gb/21/5/18/n12959124.md
+++ b/gb/21/5/18/n12959124.md
@@ -1,16 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yudwda350/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yudwda350/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yudwda350/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yudwda350/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yudwda350/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yudwda350/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yudwda350/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【横河观点】马云办学冒大学名称？以巴攻防战</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12959140-96a502da2fd4ef24784575d36b90dfd1-600x400.jpg" />
-<h6>马云办学，冒用大学名称？以巴战火激烈。（“横河观点”提供）
-</h6>
+<a href="https://d3v04vdnqz6gui.cloudfront.net/M0xr5r3Rm"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
 	<p>【大纪元2021年05月19日讯】今天是5月18日，星期二。</p>
-<p>今天焦点：<ahref="https://github.com/yudwda350/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>的<ahref="https://github.com/yudwda350/djy/blob/master/gb/tag/%E6%B9%96%E7%95%94%E5%A4%A7%E5%AD%A6.md#1">湖畔大学</a>改名为湖畔创研中心，是否教育部所说冒用大学名称扰乱教育秩序？中共为何要垄断大学教育？以巴冲突中的火箭攻、铁穹防和定点清除反击，各说明战争道义上什么问题？</p>
-<p>&#8212;&#8212;&#8212;&#8212;&#8212;-</p>
-<h2><ahref="https://github.com/yudwda350/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>办学冒用大学名称？</h2>
-<p><ahref="https://github.com/yudwda350/djy/blob/master/gb/tag/%E6%B9%96%E7%95%94%E5%A4%A7%E5%AD%A6.md#1">湖畔大学</a>被改名为创研中心，名字变了，性质和内容也变了，本来允许马云注册办大学就是个怪事。中共从来就不允许民间办大学。建政后对所谓旧中国的改造，最早就是大学，远早于三大改造。</p>
+<p>今天焦点：<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B9%96%E7%95%94%E5%A4%A7%E5%AD%A6.md#1">湖畔大学</a>改名为湖畔创研中心，是否教育部所说冒用大学名称扰乱教育秩序？中共为何要垄断大学教育？以巴冲突中的火箭攻、铁穹防和定点清除反击，各说明战争道义上什么问题？</p>
+<p><center><a src=""></a><a href="https://d3v04vdnqz6gui.cloudfront.net/M0xr5r3Rm"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/6c895c65-b783-498c-867e-73726f622224?r=16x9&amp;d=1797" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a><center></center></center></p>
+<h2><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A9%AC%E4%BA%91.md#1">马云</a>办学冒用大学名称？</h2>
+<p><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B9%96%E7%95%94%E5%A4%A7%E5%AD%A6.md#1">湖畔大学</a>被改名为创研中心，名字变了，性质和内容也变了，本来允许马云注册办大学就是个怪事。中共从来就不允许民间办大学。建政后对所谓旧中国的改造，最早就是大学，远早于三大改造。</p>
 <p>从49年的初步调整到52年全国规模的院系调整，彻底改变了原有的中华民国高等教育格局，取消了所有私立和教会大学。中共完全控制了大学高等教育。其表面的重理轻文，就是要消灭独立思考，这是在结构上为后来的反右和文革奠定了基础。</p>
 <p>当马云和一些体制外精英创建湖畔大学时，实际上是犯了大忌的，因为对中共而言，教育从来就是洗脑和思想控制的最重要阵地，是绝不能放弃的。经济上采用一部分非国有经济是无奈之举，教育垄断从来没有改变过。</p>
 <p>虽说民营教育的资金和背景也有很多权贵在其中，但和中共直接思想控制还是不同的。敢于叫大学，还要办3百年，这还得了。</p>
@@ -22,12 +21,12 @@
 <p>社会主义共产主义和正常人类社会的一切都是不兼容的，在经济上，计划经济和自由经济绝不可能兼容，打左灯向右转只是权宜之计，勉强走到今天已经很不容易了。私营经济发达了，自然会对社会主义计划经济形成威胁，无论这个私营经济有多少是权贵白手套，如何官商勾结，如何带有原罪。</p>
 <h2>以巴攻、防、反击战</h2>
 <p>以巴战火又起。这次主要是火器对打，没有卷入地面部队，可以用攻、防、反击来描述。</p>
-<p>攻：主要向以色列特莱维夫及周边地区发射火箭弹，到今天为止，<ahref="https://github.com/yudwda350/djy/blob/master/gb/tag/%E5%93%88%E9%A9%AC%E6%96%AF.md#1">哈马斯</a>和伊斯兰圣战组织已经向以色列发射了超过3,450枚火箭弹；防：以色列铁穹防御系统拦截了90%以上；反击：对哈马斯领导人和火箭发射点的定点清除。</p>
+<p>攻：主要向以色列特莱维夫及周边地区发射火箭弹，到今天为止，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%93%88%E9%A9%AC%E6%96%AF.md#1">哈马斯</a>和伊斯兰圣战组织已经向以色列发射了超过3,450枚火箭弹；防：以色列铁穹防御系统拦截了90%以上；反击：对哈马斯领导人和火箭发射点的定点清除。</p>
 <p>关于这次战争的道义，有几个层面：战争手段、战争目地和合法性。</p>
 <h3>一、战争手段和目地</h3>
 <p>西方媒体普遍报导以色列空袭的不人道和残酷，不过网上流传一段录像似乎讲了一个不同的故事。一名巴勒斯坦摄影师摆好照相机拍摄以军炸毁目标大楼全过程。因为摄影师是在录像内，显然还有一名摄像师在摄像。</p>
 <p>摄影师事先摆好了三脚架和照相机摄像机，证明以色列确实在事先通知了大楼住户轰炸时间，让住户可以撤离以避免伤亡；摄影师并不担心自己所在位置的安全，显然对以色列轰炸的定时定点准确性相当信任。</p>
-<p>在以色列和<ahref="https://github.com/yudwda350/djy/blob/master/gb/tag/%E5%93%88%E9%A9%AC%E6%96%AF.md#1">哈马斯</a>的多次交火中，看到一个现象，西方很多媒体都渲染以色列反击中巴勒斯坦平民的伤亡，确实，此次战争巴方伤亡远超以色列，但原因呢？</p>
+<p>在以色列和<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%93%88%E9%A9%AC%E6%96%AF.md#1">哈马斯</a>的多次交火中，看到一个现象，西方很多媒体都渲染以色列反击中巴勒斯坦平民的伤亡，确实，此次战争巴方伤亡远超以色列，但原因呢？</p>
 <p>有一个问题，为什么平民会在以军轰炸范围，那是因为攻击方故意吧发射器设立在居民区，用平民做掩护。而以色列应该说已经做到最大限度减少平民伤亡，高精度的灵巧炸弹，事先1小时通知平民撤出，而这是违反战争出其不意攻其不备原则的，会大大降低轰炸的效果。</p>
 <p>至于炸美联社所在大楼，我愿意相信美联社对大楼里有哈马斯基地是知情的，但不会说，也不会这样报导。</p>
 <p>对比一下，大家都对拦截火箭的铁穹印象深刻，然而铁穹并非进攻型武器，是纯防卫型的，而且是为保护己方平民的。每个铁穹导弹价值从数万至上百万美元，而火箭弹只有数千美元一个，只有关心保护国民的政府才会这样做，而从加沙和黎巴嫩发射的火箭弹却有很多落入自己的地盘，也就是说打到了自己人。</p>
@@ -46,48 +45,46 @@
 <p>中共因素，中共几乎是唯一一个和交战双方都关系很好的。</p>
 <p>强敌下生存的民主自由的国度，全世界有两个，台湾和以色列。</p>
 <p>伊朗核协议&#8230;&#8230;</p>
-<p>《<ahref="https://github.com/yudwda350/djy/blob/master/gb/tag/%E6%A8%AA%E6%B2%B3%E8%A7%82%E7%82%B9.md#1">横河观点</a>》制作组</p>
+<p>订阅<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%A8%AA%E6%B2%B3%E8%A7%82%E7%82%B9.md#1">横河观点</a>：<ahref="https://bit.ly/3pHMthA">https://bit.ly/3pHMthA</a><br />
+支持我们：<ahref="https://donorbox.org/henghenews">https://donorbox.org/henghenews</a><br />
+订阅“<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%A8%AA%E6%B2%B3%E8%A7%82%E7%82%B9.md#1">横河观点</a>”Youmaker 优美客频道：<br />
+<ahref=""></a><a href="https://d3v04vdnqz6gui.cloudfront.net/M0xr5r3Rm"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/HengHe">"></a><a href="https://d3v04vdnqz6gui.cloudfront.net/M0xr5r3Rm"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/HengHe</a></p>
+<p>《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%A8%AA%E6%B2%B3%E8%A7%82%E7%82%B9.md#1">横河观点</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/6/n12929584.md#1">【横河观点】报应太快？政法委“点火”成残骸</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/8/n12933661.md#1">【横河观点】世卫认国药疫苗？生物战渐受关注</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/12/n12940990.md#1">【横河观点】新生儿数据矛盾 学生坠亡疑点解析</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/12/n12944119.md#1">【横河观点】美制裁610谁怕了 记者遇袭幕后谁？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/6/n12929584.md#1">【横河观点】报应太快？政法委“点火”成残骸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/8/n12933661.md#1">【横河观点】世卫认国药疫苗？生物战渐受关注</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/12/n12940990.md#1">【横河观点】新生儿数据矛盾 学生坠亡疑点解析</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/12/n12944119.md#1">【横河观点】美制裁610谁怕了 记者遇袭幕后谁？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/7/n12929954.md#1">【金色种子】第一个修炼法轮功的台湾人</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/4/19/n12891271.md#1">他们不是先知 却无意中透露了天意</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/12/n12944071.md#1">【未解之谜】流落人间的金箍棒 印度德里铁柱</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/14/n12950057.md#1">【未解之谜】肉身成佛？慧能真身千年不坏</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/10/n12937774.md#1">【未解之谜】美国教堂 神奇的螺旋楼梯</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/17/n12956566.md#1">【新闻看点】以色列精准击杀哈马斯高官 北京急？</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/17/n12956208.md#1">【重播】章家敦等谈文在寅访美和中朝威胁</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/17/n12956584.md#1">【秦鹏直播】疫情再起 官员甩锅 李克强泄底？</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12954005.md#1">马云“湖畔大学”刻字石被铲名</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12952813.md#1">美前海军飞行员：连续2年几乎每天目睹UFO</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12953088.md#1">拳王泰森1995年出赛 时间旅行者使用手机？</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12954101.md#1">台疫情升温 黄秋生列要点喊话：一月内必可控</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12953857.md#1">隋棠自曝打疫苗状况 高烧痛苦到只能卧床</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12952898.md#1">台湾本土病例暴增 男星见1景象吐露担心</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/17/n12956410.md#1">杜汶泽宅在家做运动抗疫 自曝年龄惊呆网友</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/17/n12954655.md#1">民众因疫情往山上跑 阿爆吁别来：部落很困扰</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12953088.md#1">拳王泰森1995年出赛 时间旅行者使用手机？</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/17/n12954344.md#1">台湾疫情突升 封城开始了吗？警戒等级一次看</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/1/26/n12712049.md#1">餐厅吃饭、叫外卖别吃下病毒！2关键给食物灭毒</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/17/n12956077.md#1">口罩一天换2次？担心接触感染者 必做这些事</a></li>
-<li><a href="https://github.com/yudwda350/djy/blob/master/gb/21/5/16/n12953268.md#1">美国女子中2600万美元乐透 彩券却洗烂了</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yudwda350/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yudwda350/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/18/n12959124.htm">【横河观点】马云办学冒大学名称？以巴攻防战</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/18/n12959124.htm">【横河观点】马云办学冒大学名称？以巴攻防战</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yudwda350/djy/blob/master/gb/21/5/18/n12959124.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yudwda350/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yudwda350/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yudwda350/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yudwda350/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yudwda350/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/5/18/n12959124.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
